# src/index.ts
@@ -2,8 +2,8 @@ import dotenv from "dotenv";
 import express, { Express, Request, Response, NextFunction } from "express";
 import cors from "cors";
 import cookieParser from 'cookie-parser';
+import morgan from "morgan";
 import { AppError } from "./common/errors/app.error";
-import { handleCreateStore } from "./modules/store/controllers/store.controller.js";
 import { handleCreateReview, handleListStoreReviews, handleListUserReviews} from "./modules/review/controllers/review.controller.js";
 import { handleCreateMission, handleListStoreMissions } from "./modules/mission/controllers/mission.controller.js";
 import { RegisterRoutes } from "./generated/routes";
@@ -34,6 +34,7 @@ app.use(express.static("public")); // 정적 파일 접근
 app.use(express.json()); // request의 본문을 json으로 해석할 수 있도록 함(JSON 형태의 요청 body를 파싱하기 위함)
 app.use(express.urlencoded({ extended: false })); // 단순 객체 문자열 형태로 본문 데이터 해석
 app.use(cookieParser()); 
+app.use(morgan("dev")); // HTTP 요청 로깅 미들웨어
 // Express.js에 생성한 엔드 포인트들을 register
 const router = express.Router();
 RegisterRoutes(router); 
@@ -54,18 +55,7 @@ app.get("/", (req: Request, res: Response) => {
   res.send("Hello World! This is TypeScript Server!");
 });
 
-// app.post("/api/v1/areas/:areaId/stores", handleCreateStore);
-// app.post("/api/v1/stores/:storeId/review/write", handleCreateReview);
 // app.post("/api/v1/stores/:storeId/missions/write", handleCreateMission);
-// app.post(
-//   "/api/v1/users/missions/:missionId/challenges",
-//   handleChallengeMission,
-// );
-// app.post(
-//   "/api/v1/users/missions/:missionId/success",
-//   handleCompleteMission,
-// );
-
 // app.get("/api/v1/stores/:storeId/review", handleListStoreReviews);
 // app.get("/api/v1/users/review", handleListUserReviews);
 // app.get("/api/v1/stores/:storeId/missions", handleListStoreMissions);
